Fix z-indexes

--- a/src/less/ios/lists.less
+++ b/src/less/ios/lists.less
@@ -296,7 +296,7 @@
     .list-group {
         ul {
             &:after, &:before {
-                z-index: 11;
+                z-index: 25;
             }
         }
         + .list-group ul {
@@ -314,6 +314,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         color: @dividerColor;
+        z-index: 15;
     }
     .list-group-title {
         position: relative;
